--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,25 @@ body {
   line-height: 1.25;
 }
 
+/* Hides skip links */
+.skip-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+  background-color: black;
+  color: white;
+  padding: .5em 1em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
 h1,
 h2,
 h3,
